--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <meta name="theme-color" content="#000000" />
   <link type="text/css" rel="stylesheet" href="%PUBLIC_URL%/styles/basic.css" />
   <link type="text/css" rel="stylesheet" href="%PUBLIC_URL%/styles/service.css" />
+  <link type="text/css" rel="stylesheet" href="%PUBLIC_URL%/styles/tooltip.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <script type="text/javascript" src="%PUBLIC_URL%/logger.js"></script>
   <title>Today</title>
