--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <link type="text/css" rel="stylesheet" href="%PUBLIC_URL%/styles/tooltip.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <script type="text/javascript" src="%PUBLIC_URL%/logger.js"></script>
-  <title>Today</title>
+  <title>graphEDITOR</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Gruppo&display=swap" rel="stylesheet">
@@ -18,7 +18,6 @@
         rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400&display=swap" rel="stylesheet">
 </head>
-
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
